--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "react-native": "0.71.3",
     "react-native-stack": "^1.0.0-alpha11",
     "react-native-vector-icons": "^9.2.0",
-    "react-navigation": "^4.4.4"
+    "react-navigation": "^4.4.4",
+    "react-native-gesture-handler": "~2.9.0",
+    "react-native-reanimated": "~2.14.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
